[package]
name = "MyRustAV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version="0.3.9",features=["winuser","heapapi","errhandlingapi","minwindef", "memoryapi", "winnt","sysinfoapi"]}
rust-crypto="0.2.36"
hex="0.4.3"
base64="0.13.0"
rustc-serialize = "0.3"
rand = "0.8"
winreg = "0.7.0"
chrono = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
